<resources>

    <!--app-->
    <string name="app_name">Football Schedule</string>

    <!--activity_main-->
    <string name="result_match">Result Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorite_match">Favorite Match</string>

    <!--detail_activity-->
    <string name="vs">vs</string>
    <string name="match_statistic">Match Statistic</string>
    <string name="goals">Goals</string>
    <string name="shoots">Shoots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="home_logo">Home Logo</string>
    <string name="away_logo">Away Logo</string>
    <string name="favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
