<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_result_match"
        android:enabled="true"
        android:title="@string/result_match"
        android:icon="@drawable/ic_result_match"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_next_match"
        android:enabled="true"
        android:icon="@drawable/ic_next_mach"
        android:title="@string/next_match"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_favorite_match"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_match"
        app:showAsAction="ifRoom" />
</menu>