<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detailmatch.DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pb_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_dateDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/iv_homeLogo"
                    android:contentDescription="@string/home_logo"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="4"/>

                <TextView
                    android:id="@+id/tv_homeScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/tv_vs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/vs"/>

                <TextView
                    android:id="@+id/tv_awayScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/iv_awayLogo"
                    android:contentDescription="@string/away_logo"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homeName"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/tv_awayName"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homeFormation"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/tv_awayFormation"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_matchStatistic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/match_statistic"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homeGoals"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"/>

                <TextView android:id="@+id/tv_goals"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/goals"/>

                <TextView
                    android:id="@+id/tv_awayGoals"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homeShots"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/tv_shots"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/shoots"/>

                <TextView
                    android:id="@+id/tv_awayShots"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_lineups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/lineups"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homeGoalKeeper"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/tv_goalKeeper"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/goal_keeper"/>

                <TextView
                    android:id="@+id/tv_awayGoalKeeper"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homeDefense"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/tv_defense"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/defense"/>

                <TextView
                    android:id="@+id/tv_awayDefense"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homeMidfield"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/tv_midfield"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/midfield"/>

                <TextView
                    android:id="@+id/tv_awayMidfield"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homeForward"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/tv_forward"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/forward"/>

                <TextView
                    android:id="@+id/tv_awayForward"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>

